@@ -1,3 +1,8 @@
+2004/12/07 Teflon <teflon114@gmail.com>
+* Modified SITE GINFO to have more informative output
+* Modified SITE INVITE to automatically identify the irc user
+* Added SiteBot announcements for successful and failed invite events
+
 2004/12/06 Morgan Christiansson <drftpd@mog.se>
 * Removed jsx3 and xstream3 usermanagers, removed AutoFreeSpace.
   There were reports of them being broken and i'm not maintaining them anymore.
